# Orion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  audio_track_process.txt  build_errors.txt  build_linux.sh  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_latest.txt  build_macos.sh  build_windows.bat  instrument_track_process.txt  orion_location.txt  plugins.cache.json  settings.orionconf  test_errors.txt  verify_changes.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: plugin_issue.yml
.github/workflows/: build_and_test.yml
Extensions/LoFiChords/: main.lua
Extensions/MarkerHelper/: main.lua
Extensions/MixResetAll/: manifest.lua
Extensions/ProjectCleaner/: main.lua
app/: CommandManager.cpp  CommandManager.h  ExtensionApiIndex.cpp  ExtensionApiIndex.h  ExtensionManager.cpp  ExtensionManager.h  LuaLanguageServerManager.cpp  LuaLanguageServerManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  OrionIcons.h  OrionLookAndFeel.cpp  OrionLookAndFeel.h  OrionWindow.h  PluginWindowManager.cpp  PluginWindowManager.h  ProjectManager.cpp  ProjectManager.h  QwertyMidi.cpp  QwertyMidi.h  UiHints.h
app/components/: AboutComponent.cpp  AboutComponent.h  AdaptiveSpaceWindow.cpp  AdaptiveSpaceWindow.h  AutomationLaneComponent.cpp  AutomationLaneComponent.h  BrowserComponent.cpp  BrowserComponent.h  ChannelInspectorPopup.cpp  ChannelInspectorPopup.h  ChannelStrip.cpp  ChannelStrip.h  ClipComponent.cpp  ClipComponent.h  CommandPaletteComponent.cpp  CommandPaletteComponent.h  CustomTitleBar.cpp  CustomTitleBar.h  DashboardComponent.cpp  DashboardComponent.h  DetachedWindow.h  DockablePanel.cpp  DockablePanel.h  DocumentationViewComponent.cpp  DocumentationViewComponent.h  EditorComponent.cpp  EditorComponent.h  ExtensionEditorComponent.cpp  ExtensionEditorComponent.h  ExtensionViewComponent.cpp  ExtensionViewComponent.h  FluxShaperEditor.cpp  FluxShaperEditor.h  GuidedStartWizard.cpp  GuidedStartWizard.h  HeaderComponent.cpp  HeaderComponent.h  InsertSlot.cpp  InsertSlot.h  InspectorComponent.cpp  (+45 more)
app/ui/: OrionDesignSystem.cpp  OrionDesignSystem.h  OrionUIPrimitives.cpp  OrionUIPrimitives.h
assets/Extensions/MarkerHelper/: manifest.lua
assets/Extensions/MixResetAll/: main.lua
assets/Extensions/TechnoRumble/: main.lua
assets/documentation/01 Getting Started/: Interface.md  Troubleshooting.md  Welcome.md
assets/documentation/02 Creative Workflow/: Arrangement.md  Recording.md  TempoGrid.md
assets/documentation/03 Mixing & Effects/: Automation.md  Mastering.md  SignalFlow.md
assets/documentation/04 Extension System/: APIReference.md  LuaDeepDive.md  UIDesign.md
assets/documentation/05 Reference/: Glossary.md  Shortcuts.md
assets/documentation/Developer/: Extensions.md  OrionAPI.md  Scripting.md
assets/documentation/Getting Started/: Basic Usage.md  Installation.md
assets/documentation/User Guide/: Dashboard.md  Editor.md  Mixer.md  OAE.md
assets/ide/monaco/: README.md  workbench.css  workbench.html  workbench.js
assets/tools/lua-language-server/: README.md
include/orion/: AudioBlock.h  AudioClip.h  AudioEngine.h  AudioFile.h  AudioNode.h  AudioTrack.h  Automation.h  ClipCommands.h  Command.h  CommandHistory.h  CompressorNode.h  DelayNode.h  EQ3Node.h  EditorCommands.h  EffectNode.h  EffectRackNode.h  EnvironmentNode.h  FluxShaperNode.h  GainNode.h  GlitchCommands.h  GlitchProcessor.h  HostContext.h  InstrumentTrack.h  LimiterNode.h  Logger.h  MasterNode.h  MidiClip.h  MidiStructures.h  OscillatorNode.h  PluginManager.h  PrismStackNode.h  ProjectSerializer.h  ReverbNode.h  RingBuffer.h  SamplerNode.h  SettingsManager.h  SynthesizerNode.h  ThreadPool.h  TimeStretcher.h  UiThemeRegistry.h  (+6 more)
installer/: OrionInstaller.iss  build_release_package.ps1  prepare-installer-art.ps1
src/: AudioBlock.cpp  AudioClip.cpp  AudioEngine.cpp  AudioFile.cpp  AudioNode.cpp  AudioTrack.cpp  Automation.cpp  CommandHistory.cpp  CompressorNode.cpp  DelayNode.cpp  EQ3Node.cpp  EffectRackNode.cpp  EnvironmentNode.cpp  FluxShaperNode.cpp  GainNode.cpp  GlitchProcessor.cpp  InstrumentTrack.cpp  LimiterNode.cpp  Logger.cpp  MasterNode.cpp  MidiClip.cpp  OscillatorNode.cpp  PluginManager.cpp  PrismStackNode.cpp  ProjectSerializer.cpp  ReverbNode.cpp  SamplerNode.cpp  SettingsManager.cpp  SynthesizerNode.cpp  ThreadPool.cpp  TimeStretcher.cpp  UiThemeRegistry.cpp  UxTelemetry.cpp  VST3Node.cpp  VSTNode.cpp  WavWriter.cpp
test_data/Orion/: plugins.cache.json  settings.json  settings.orionconf
test_data/Orion/Extensions/Example/: main.lua
tests/: ExtensionTest.cpp  TestBpmSync.cpp  TestCommandHistory.cpp  TestExtensionApiIndex.cpp  TestGuidedStartCommand.cpp  TestLuaJsonRpc.cpp  TestTranspose.cpp  TestUxState.cpp  contention_bench.cpp  engine_bench.cpp  metronome_bench.cpp  osc_benchmark.cpp  osc_test.cpp  performance_bench.cpp  settings_migration_test.cpp  verify_features.cpp  vst3_contention_bench.cpp  vst_queue_bench.cpp
